--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+        <!--        SSH -->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.51</version>
+        </dependency>
+        </dependency>
     </dependencies>
 
     <build>
