[未确认]登录鉴权获得openId

--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,17 @@
             <artifactId>jsch</artifactId>
             <version>0.1.51</version>
         </dependency>
+        <!-- 注：微信小程序加密解密包 xfire-core, bcprov-jdk1-->
+        <dependency>
+            <groupId>org.codehaus.xfire</groupId>
+            <artifactId>xfire-core</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk16</artifactId>
+            <version>1.46</version>
+        </dependency>
     </dependencies>
 
     <build>
