--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,9 @@
 server:
   url: localhost
   port: 8999
+app:
+  id: wxb35202144a522b5a
+  secret: 733f3daca5a9d097ce7799ea2abeab44
 
 #Mysql连接池
 spring:
