--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@
             <artifactId>bcprov-jdk16</artifactId>
             <version>1.46</version>
         </dependency>
+
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+        <version>2.6</version>
+
+    </dependency>
     </dependencies>
 
     <build>
